# syspeek

./: .gitignore  LICENSE  README.MD  main.py  pyproject.toml
monitor/: battery.py  memory.py  system.py
syspeek/: main.py
syspeek/monitor/: cpu.py  disk.py
